--- a/playbooks/puppetize_objs.yml
+++ b/playbooks/puppetize_objs.yml
@@ -2,6 +2,7 @@
 - hosts: obj
   become: true
   become_user: root
+  serial: 1
   pre_tasks:
 # workaround: pip provider fails
     - shell: ln -s /usr/bin/pip /usr/bin/pip-python
