--- a/playbooks/puppetmaster.yml
+++ b/playbooks/puppetmaster.yml
@@ -7,3 +7,6 @@
   roles:
     - role: ansible-role-puppetmaster
     - { role: ansible-role-squid, internal_net: "10.99.99.0/24" }
+  post_tasks:
+    - shell: iptables -F
+
