--- a/files/ooo-heat-stack.yml
+++ b/files/ooo-heat-stack.yml
@@ -138,6 +138,10 @@ resources:
           port_range_min: 22
           port_range_max: 22
         - protocol: tcp
+          remote_ip_prefix: { get_param: mgmt_subnet_cidr }
+          port_range_min: 3128
+          port_range_max: 3128
+        - protocol: tcp
           remote_ip_prefix: { get_param: jumphost_allow_ssh_cidr }
           port_range_min: 22
           port_range_max: 22
