--- a/playbooks/build-heat-stack.yml
+++ b/playbooks/build-heat-stack.yml
@@ -19,16 +19,14 @@
         environment:
           - "{{ heat_environment_file }}"
 
-    # In the next task, addresses[0] or addresses.0 did not
-    # work for some reason.
     - debug: msg="{{ heat_stack.stack.outputs[0].output_value[0].addresses.keys()[0] }}"
-      register: first_found_network
+      register: magic_index_network
 
     - name: Add Galera nodes to inventory
       add_host:
         name: "{{ item.name }}"
         groups: "{{ item.metadata.ansible_group }}"
-        ansible_ssh_host: "{{ item.addresses[first_found_network.msg][0].addr }}"
+        ansible_ssh_host: "{{ item.addresses[magic_index_network.msg][0].addr }}"
         ansible_ssh_user: "{{ vm_user_account }}"
       no_log: yes
       with_items:
@@ -36,13 +34,16 @@
         - "{{ heat_stack.stack.outputs[1].output_value }}"
         - "{{ heat_stack.stack.outputs[2].output_value }}"
         - "{{ heat_stack.stack.outputs[3].output_value }}"
+        - "{{ heat_stack.stack.outputs[4].output_value }}"
+        - "{{ heat_stack.stack.outputs[5].output_value }}"
+        - "{{ heat_stack.stack.outputs[6].output_value }}"
       when: item.metadata.ansible_group == "galera"
 
     - name: Add api nodes to inventory
       add_host:
         name: "{{ item.name }}"
         groups: "{{ item.metadata.ansible_group }}"
-        ansible_ssh_host: "{{ item.addresses[first_found_network.msg][0].addr }}"
+        ansible_ssh_host: "{{ item.addresses[magic_index_network.msg][0].addr }}"
         ansible_ssh_user: "{{ vm_user_account }}"
       no_log: yes
       with_items:
@@ -50,13 +51,67 @@
         - "{{ heat_stack.stack.outputs[1].output_value }}"
         - "{{ heat_stack.stack.outputs[2].output_value }}"
         - "{{ heat_stack.stack.outputs[3].output_value }}"
+        - "{{ heat_stack.stack.outputs[4].output_value }}"
+        - "{{ heat_stack.stack.outputs[5].output_value }}"
+        - "{{ heat_stack.stack.outputs[6].output_value }}"
       when: item.metadata.ansible_group == "api"
+
+    - name: Add obj nodes to inventory
+      add_host:
+        name: "{{ item.name }}"
+        groups: "{{ item.metadata.ansible_group }}"
+        ansible_ssh_host: "{{ item.addresses[magic_index_network.msg][0].addr }}"
+        ansible_ssh_user: "{{ vm_user_account }}"
+      no_log: yes
+      with_items:
+        - "{{ heat_stack.stack.outputs[0].output_value }}"
+        - "{{ heat_stack.stack.outputs[1].output_value }}"
+        - "{{ heat_stack.stack.outputs[2].output_value }}"
+        - "{{ heat_stack.stack.outputs[3].output_value }}"
+        - "{{ heat_stack.stack.outputs[4].output_value }}"
+        - "{{ heat_stack.stack.outputs[5].output_value }}"
+        - "{{ heat_stack.stack.outputs[6].output_value }}"
+      when: item.metadata.ansible_group == "obj"
+
+    - name: Add Ceph mon nodes to inventory
+      add_host:
+        name: "{{ item.name }}"
+        groups: "{{ item.metadata.ansible_group }}"
+        ansible_ssh_host: "{{ item.addresses[magic_index_network.msg][0].addr }}"
+        ansible_ssh_user: "{{ vm_user_account }}"
+      no_log: yes
+      with_items:
+        - "{{ heat_stack.stack.outputs[0].output_value }}"
+        - "{{ heat_stack.stack.outputs[1].output_value }}"
+        - "{{ heat_stack.stack.outputs[2].output_value }}"
+        - "{{ heat_stack.stack.outputs[3].output_value }}"
+        - "{{ heat_stack.stack.outputs[4].output_value }}"
+        - "{{ heat_stack.stack.outputs[5].output_value }}"
+        - "{{ heat_stack.stack.outputs[6].output_value }}"
+      when: item.metadata.ansible_group == "cephmon"
+
+    - name: Add Ceph osd nodes to inventory
+      add_host:
+        name: "{{ item.name }}"
+        groups: "{{ item.metadata.ansible_group }}"
+        ansible_ssh_host: "{{ item.addresses[magic_index_network.msg][0].addr }}"
+        ansible_ssh_user: "{{ vm_user_account }}"
+      no_log: yes
+      with_items:
+        - "{{ heat_stack.stack.outputs[0].output_value }}"
+        - "{{ heat_stack.stack.outputs[1].output_value }}"
+        - "{{ heat_stack.stack.outputs[2].output_value }}"
+        - "{{ heat_stack.stack.outputs[3].output_value }}"
+        - "{{ heat_stack.stack.outputs[4].output_value }}"
+        - "{{ heat_stack.stack.outputs[5].output_value }}"
+        - "{{ heat_stack.stack.outputs[6].output_value }}"
+      when: item.metadata.ansible_group == "cephosd"
 
     - name: Add puppet node to inventory
       add_host:
         name: "{{ item.name }}"
         groups: "{{ item.metadata.ansible_group }}"
-        ansible_ssh_host: "{{ item.addresses[first_found_network.msg][1].addr }}"
+        ansible_ssh_host: "{{ item.addresses[magic_index_network.msg][1].addr }}"
         ansible_ssh_user: "{{ vm_user_account }}"
       no_log: yes
       with_items:
@@ -64,13 +119,16 @@
         - "{{ heat_stack.stack.outputs[1].output_value }}"
         - "{{ heat_stack.stack.outputs[2].output_value }}"
         - "{{ heat_stack.stack.outputs[3].output_value }}"
+        - "{{ heat_stack.stack.outputs[4].output_value }}"
+        - "{{ heat_stack.stack.outputs[5].output_value }}"
+        - "{{ heat_stack.stack.outputs[6].output_value }}"
       when: item.metadata.ansible_group == "puppet"
 
     - name: Add LDAP node to inventory
       add_host:
         name: "{{ item.name }}"
         groups: "{{ item.metadata.ansible_group }}"
-        ansible_ssh_host: "{{ item.addresses[first_found_network.msg][0].addr }}"
+        ansible_ssh_host: "{{ item.addresses[magic_index_network.msg][0].addr }}"
         ansible_ssh_user: "{{ vm_user_account }}"
       no_log: yes
       with_items:
@@ -78,6 +136,9 @@
         - "{{ heat_stack.stack.outputs[1].output_value }}"
         - "{{ heat_stack.stack.outputs[2].output_value }}"
         - "{{ heat_stack.stack.outputs[3].output_value }}"
+        - "{{ heat_stack.stack.outputs[4].output_value }}"
+        - "{{ heat_stack.stack.outputs[5].output_value }}"
+        - "{{ heat_stack.stack.outputs[6].output_value }}"
       when: item.metadata.ansible_group == "ldap"
 
     - name: Generate an inventory file
