--- a/playbooks/puppetmaster.yml
+++ b/playbooks/puppetmaster.yml
@@ -9,4 +9,5 @@
     - { role: ansible-role-squid, internal_net: "10.99.99.0/24" }
   post_tasks:
     - shell: iptables -F
-
+    - shell: systemctl restart puppetdb
+    - shell: systemctl restart puppetmaster
