--- a/playbooks/puppetmaster.yml
+++ b/playbooks/puppetmaster.yml
@@ -10,6 +10,6 @@
   post_tasks:
     - shell: iptables -F
     - name: workaround - modify puppetdb -Xmx setting and restart service
-      shell: 'sed -i "s/512m/2048m/" "{{puppet_code_dir}}/environments/{{puppet_environment}}/modules/cccp/manifests/role/puppetmaster.pp"'
+      shell: 'sed -i "s/512m/2048m/" "/etc/puppet/environments/{{puppet_environment}}/modules/cccp/manifests/role/puppetmaster.pp"'
     - shell: 'sed -i "s/Xmx512m/Xmx2048m/" "/etc/sysconfig/puppetdb"'
     - shell: systemctl restart puppetdb
