Add puppetmaster service restart

--- a/playbooks/puppetmaster.yml
+++ b/playbooks/puppetmaster.yml
@@ -9,7 +9,8 @@
     - { role: ansible-role-squid, internal_net: "10.99.99.0/24" }
   post_tasks:
     - shell: iptables -F
-    - name: workaround - modify puppetdb -Xmx setting and restart service
+    - name: puppet-server craps out - modify puppetdb -Xmx setting and restart services
       shell: 'sed -i "s/512m/2048m/" "/etc/puppet/environments/{{puppet_environment}}/modules/cccp/manifests/role/puppetmaster.pp"'
     - shell: 'sed -i "s/Xmx512m/Xmx2048m/" "/etc/sysconfig/puppetdb"'
     - shell: systemctl restart puppetdb
+    - shell: systemctl restart puppetmaster
