Use per workspace .ssh dir

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [ssh_connection]
-ssh_args = -o "StrictHostKeyChecking no" -o "UserKnownHostsFile /dev/null" -o "ControlMaster auto" -o "ControlPath ~/.ssh/cm_socket/%r@%h:%p" -o "ControlPersist 10h"
+ssh_args = -o "StrictHostKeyChecking no" -o "UserKnownHostsFile /dev/null" -o "ControlMaster auto" -o "ControlPath .ssh/cm_socket/%r@%h:%p" -o "ControlPersist 10h"
 
 [defaults]
 roles_path = roles/
