--- a/ssh.config
+++ b/ssh.config
@@ -2,5 +2,5 @@ Host *
   StrictHostKeyChecking no
   UserKnownHostsFile /dev/null
   ControlMaster auto
-  ControlPath ~/.ssh/cm_socket/%r@%h:%p
+  ControlPath .ssh/cm_socket/%r@%h:%p
   ControlPersist 10h
